🐞 fix: scrollbar 组件高度

--- a/src/scrollbar/src/styles/index.css
+++ b/src/scrollbar/src/styles/index.css
@@ -3,9 +3,6 @@
   height: 100%;
   overflow: scroll;
 }
-.jo-scrollbar-content {
-  min-width: 100%;
-}
 .jo-scrollbar::-webkit-scrollbar {
   /*滚动条整体样式*/
   width: 7px; /*高宽分别对应横竖滚动条的尺寸*/
